Сетки компонентов на гридах на главной странице

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -587,8 +587,9 @@ body {
 }
 
 .contacts-delivery-container {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 108px;
   margin-bottom: 70px;
 }
 
